force-app/main/default/objects/InterfaceFieldMapping__c/InterfaceFieldMapping__c.object-meta.xml
<CustomObject>
    <label>接口字段映射配置</label>
    <nameField>
        <displayFormat>IFM{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>接口字段映射配置编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>