force-app/main/default/objects/InterfaceFieldMapping__c/fields/ForUpsert__c.field-meta.xml
<CustomField>
    <fullName>ForUpsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>用于Upsert</label>
    <type>Checkbox</type>
</CustomField>