force-app/main/default/objects/InterfaceFieldMapping__c/fields/InterfaceField__c.field-meta.xml
<CustomField>
    <fullName>InterfaceField__c</fullName>
    <label>接口字段</label>
    <length>255</length>
    <type>Text</type>
</CustomField>