force-app/main/default/objects/InterfaceFieldMapping__c/fields/InterfaceObj__c.field-meta.xml
<CustomField>
    <fullName>InterfaceObj__c</fullName>
    <label>接口对象</label>
    <length>255</length>
    <type>Text</type>
</CustomField>