force-app/main/default/objects/InterfaceFieldMapping__c/fields/IntfDefineName__c.field-meta.xml
<CustomField>
    <fullName>IntfDefineName__c</fullName>
    <label>应用接口配置名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>