force-app/main/default/objects/InterfaceFieldMapping__c/fields/IsErrorFlag__c.field-meta.xml
<CustomField>
    <fullName>IsErrorFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否是错误标志</label>
    <type>Checkbox</type>
</CustomField>