force-app/main/default/objects/InterfaceFieldMapping__c/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <label>父对象名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>