force-app/main/default/objects/InterfaceFieldMapping__c/fields/ParentObjectField__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectField__c</fullName>
    <label>父对象字段</label>
    <length>255</length>
    <type>Text</type>
</CustomField>