force-app/main/default/objects/InterfaceFieldMapping__c/fields/RegularCheck__c.field-meta.xml
<CustomField>
    <fullName>RegularCheck__c</fullName>
    <label>正则校验</label>
    <length>255</length>
    <type>Text</type>
</CustomField>