force-app/main/default/objects/InterfaceFieldMapping__c/fields/SfdcDetailObj__c.field-meta.xml
<CustomField>
    <fullName>SfdcDetailObj__c</fullName>
    <label>SFDC子对象</label>
    <length>255</length>
    <type>Text</type>
</CustomField>