force-app/main/default/objects/InterfaceFieldMapping__c/fields/SfdcField__c.field-meta.xml
<CustomField>
    <fullName>SfdcField__c</fullName>
    <label>SFDC字段</label>
    <length>255</length>
    <type>Text</type>
</CustomField>