force-app/main/default/objects/InterfaceFieldMapping__c/fields/SfdcFieldType__c.field-meta.xml
<CustomField>
    <fullName>SfdcFieldType__c</fullName>
    <label>SFDC字段类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>