force-app/main/default/objects/InterfaceFieldMapping__c/fields/SfdcObj__c.field-meta.xml
<CustomField>
    <fullName>SfdcObj__c</fullName>
    <label>SFDC对象</label>
    <length>255</length>
    <type>Text</type>
</CustomField>