force-app/main/default/objects/InterfaceFieldMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>ForUpsert__c</columns>
    <columns>IsRequired__c</columns>
    <columns>IsErrorFlag__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>