force-app/main/default/objects/InterfaceFieldMapping__c/listViews/OA_LoadShow.listView-meta.xml
<ListView>
    <fullName>OA_LoadShow</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>IsRequired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntfDefineName__c</field>
        <operation>equals</operation>
        <value>OA_APPLY_FOR_ROADSHOW</value>
    </filters>
    <label>7 OA路演信息</label>
</ListView>