force-app/main/default/objects/InterfaceFieldMapping__c/listViews/ORDER_TARGET_BASE.listView-meta.xml
<ListView>
    <fullName>ORDER_TARGET_BASE</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>ForUpsert__c</columns>
    <columns>IsRequired__c</columns>
    <columns>IsErrorFlag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntfDefineName__c</field>
        <operation>equals</operation>
        <value>U8_ORDER_TARGET_BASE</value>
    </filters>
    <label>4 门店订单目标基表</label>
</ListView>