force-app/main/default/objects/InterfaceFieldMapping__c/listViews/U8Product2.listView-meta.xml
<ListView>
    <fullName>U8Product2</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>ForUpsert__c</columns>
    <columns>IsRequired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntfDefineName__c</field>
        <operation>equals</operation>
        <value>U8_PRODUCT</value>
    </filters>
    <label>2 产品信息</label>
</ListView>