force-app/main/default/objects/InterfaceFieldMapping__c/listViews/U8SalesOrder.listView-meta.xml
<ListView>
    <fullName>U8SalesOrder</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>ForUpsert__c</columns>
    <columns>IsRequired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntfDefineName__c</field>
        <operation>equals</operation>
        <value>U8_SALESORDER</value>
    </filters>
    <label>5-1 销售订单信息(SellIn)</label>
</ListView>