force-app/main/default/objects/InterfaceFieldMapping__c/listViews/VTS_Equipment.listView-meta.xml
<ListView>
    <fullName>VTS_Equipment</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>IsRequired__c</columns>
    <columns>ForUpsert__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntfDefineName__c</field>
        <operation>equals</operation>
        <value>VTS_EQUIPMENT</value>
    </filters>
    <label>9 VTS门店设备信息</label>
</ListView>