force-app/main/default/objects/InterfaceFieldMapping__c/listViews/VTS_Training_Certification.listView-meta.xml
<ListView>
    <fullName>VTS_Training_Certification</fullName>
    <columns>NAME</columns>
    <columns>IntfDefineName__c</columns>
    <columns>InterfaceObj__c</columns>
    <columns>InterfaceField__c</columns>
    <columns>InterfaceFieldType__c</columns>
    <columns>SfdcObj__c</columns>
    <columns>SfdcField__c</columns>
    <columns>SfdcFieldType__c</columns>
    <columns>IsRequired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntfDefineName__c</field>
        <operation>equals</operation>
        <value>VTS_TRAINING_CERTIFICATION</value>
    </filters>
    <label>12 VTS培训星级认证信息</label>
</ListView>